# curia

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  README.md  SPEC.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml  codeql.yml
apps/: __init__.py
apps/api/: __init__.py  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/middleware/: logging.py
apps/api/app/routers/: health.py
apps/api/app/routers/v1/: __init__.py  _utils.py  agenda_items.py  amendments.py  documents.py  institutions.py  meetings.py  metrics.py  motions.py  parties.py  politicians.py  promises.py  questions.py  search.py  sources.py  votes.py
apps/api/app/schemas/: common.py  responses.py
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/lib/: api.ts  types.ts
apps/worker/: __init__.py  pyproject.toml
apps/worker/app/: celery_app.py  config.py
apps/worker/app/tasks/: __init__.py  analytics.py  crawl.py  document_processing.py  extraction.py  identity_resolution.py  normalization.py  source_sync.py
docs/project-management/: agentic-workflow.md  infrastructure.md  milestones.md
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_search_full_text_indexes.py  0003_vote_records_and_decision_external_id.py  0004_bills_and_bill_stages.py
scripts/: bootstrap-github.sh
tests/: conftest.py  test_api_v1_endpoints.py  test_ibabs_connector.py  test_ibabs_entity_mapper.py  test_ibabs_parsers.py  test_review_followups.py  test_smoke.py  test_tweedekamer_bill_sync.py  test_tweedekamer_committee_session_sync.py  test_tweedekamer_member_sync.py  test_tweedekamer_odata_client.py  test_tweedekamer_vote_sync.py  test_worker_ibabs_tasks.py
tests/fixtures/ibabs/almelo/: document_page.html  document_page.json  meeting_detail.html  meeting_detail.json  meeting_list.html  meeting_list.json  member_roster.html  member_roster.json  party_list.html  party_list.json
tests/fixtures/ibabs/heerenveen/: document_page.html  document_page.json  meeting_detail.html  meeting_detail.json  meeting_list.html  meeting_list.json  member_roster.html  member_roster.json  party_list.html  (+1 more)
(+5 files in other folders)
