[project]
name = "curia"
version = "0.1.0"
description = "Curia — Dutch political intelligence platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Curia Team" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["curia"]

# ---------------------------------------------------------------------------
# uv workspace — every package & app is a member
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "pytest>=8,<9",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3,<4",
    "httpx>=0.27,<1",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/domain",
    "packages/ingestion",
    "packages/connectors/ibabs",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that need external services",
]
