[project]
name = "curia-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "redis>=5.0",
    "curia-domain",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
curia-domain = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
