[project]
name = "curia-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "curia-domain",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
